--- a/budget/templates/budget/reports.html
+++ b/budget/templates/budget/reports.html
@@ -12,6 +12,10 @@
 {{ transaction_label|json_script:"transaction_label" }}
 {{ transaction_amount|json_script:"transaction_amount" }}
 {{ transaction_date|json_script:"transaction_date" }}
+{{ cat_sum|json_script:"cat_sum"}}
+{{ sums|json_script:"sums"}}
+{{ sumLabels|json_script:"sumLabels"}}
+{{ numIncome|json_script:"numIncome"}}
 
     <div class="col py-3">
         <div class="container-fluid">
@@ -177,112 +181,41 @@
                                         <div class="col-md-6">
                                             <div class="card text-white bg-dark h-100 bg-opacity-25">
                                                 <div class="card-body">
-                                                    <p>Your Categories</p>
-                                                    <canvas id="myChart1"></canvas>
+                                                    <h2 class="fs-5 text-center">Categories</h2>
+                                                    <canvas id="myChartCategories1"></canvas>
                                                     <script type="text/javascript">
-                                                    var categoryNames = JSON.parse(document.getElementById('category_names').textContent)
-                                                    console.log(categoryNames)
-                                                    $(document).ready(function(){
-                                                        var ctx = document.getElementById('myChart1').getContext('2d');
-                                                        var myCategory = new Chart(ctx, {
-                                                            type: 'doughnut',
-                                                            data: {
-                                                                labels: categoryNames,
-                                                                datasets: [{
-                                                                    label: 'category names',
-                                                                    data: categoryNames.map(category => 1),
-                                                                    backgroundColor: [
-                                                                        'rgba(255, 99, 132, 0.2)', 
-                                                                        'rgba(54, 162, 235, 0.2)',
-                                                                        'rgba(255, 206, 86, 0.2)',
-                                                                        'rgba(75, 192, 192, 0.2)',
-                                                                        'rgba(153, 102, 255, 0.2)',
-                                                                        'rgba(255, 159, 64, 0.2)',
-                                                                        'rgba(255, 99, 132, 0.2)', 
-                                                                        'rgba(54, 162, 235, 0.2)',
-                                                                        'rgba(255, 206, 86, 0.2)',
-                                                                        'rgba(75, 192, 192, 0.2)',
-                                                                        'rgba(153, 102, 255, 0.2)',
-                                                                        'rgba(255, 159, 64, 0.2)',
-                                                                    ],
-                                                                    borderColor: [
-                                                                        'rgba(255, 99, 132, 1)',
-                                                                        'rgba(54, 162, 235, 1)',
-                                                                        'rgba(255, 206, 86, 1)',
-                                                                        'rgba(75, 192, 192, 1)',
-                                                                        'rgba(153, 102, 255, 1)',
-                                                                        'rgba(255, 159, 64, 1)',
-                                                                        'rgba(255, 99, 132, 1)',
-                                                                        'rgba(54, 162, 235, 1)',
-                                                                        'rgba(255, 206, 86, 1)',
-                                                                        'rgba(75, 192, 192, 1)',
-                                                                        'rgba(153, 102, 255, 1)',
-                                                                        'rgba(255, 159, 64, 1)',
-                                                                    ],
-                                                                    borderWidth: 1
-                                                                }]
-                                                            },
-                                                            options: {
-                                                                legend: {
-                                                                    display: false,
-                                                                },
-                                                                scales: {
-                                                                    y: {
-                                                                        beginAtZero: true
-                                                                    }
-                                                                },
-                                                            }            
-                                                });
-                                                    });
-                                                </script>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="card text-white bg-dark h-100 bg-opacity-25">
-                                                <div class="card-body">
-                                                    <p>Your Category Types</p>
-                                                    <canvas id="myChart2"></canvas>
-                                                    <script type="text/javascript">
-                                                        var categoryTypes = JSON.parse(document.getElementById('category_types').textContent)
-                                                        console.log(categoryTypes)
-                                                        $(document).ready(function(){
-                                                            var ctx = document.getElementById('myChart2').getContext('2d');
+                                                        var categoryNames = JSON.parse(document.getElementById('category_names').textContent)
+                                                        $(document).ready(function () {
+                                                            var ctx = document.getElementById('myChartCategories1').getContext('2d');
                                                             var myCategory = new Chart(ctx, {
                                                                 type: 'doughnut',
                                                                 data: {
-                                                                    labels: categoryTypes,
+                                                                    labels: categoryNames,
                                                                     datasets: [{
-                                                                        label: 'Category Types',
-                                                                        data: categoryTypes.map(category => 1),
+                                                                        label: 'category names',
+                                                                        data: categoryNames.map(category => 1),
                                                                         backgroundColor: [
-                                                                            'rgba(255, 99, 132, 0.2)', 
-                                                                            'rgba(54, 162, 235, 0.2)',
-                                                                            'rgba(255, 206, 86, 0.2)',
-                                                                            'rgba(75, 192, 192, 0.2)',
-                                                                            'rgba(153, 102, 255, 0.2)',
-                                                                            'rgba(255, 159, 64, 0.2)',
-                                                                            'rgba(255, 99, 132, 0.2)', 
-                                                                            'rgba(54, 162, 235, 0.2)',
-                                                                            'rgba(255, 206, 86, 0.2)',
-                                                                            'rgba(75, 192, 192, 0.2)',
-                                                                            'rgba(153, 102, 255, 0.2)',
-                                                                            'rgba(255, 159, 64, 0.2)',
+                                                                            '#1abc9c',
+                                                                            '#16a085',
+                                                                            '#2ecc71',
+                                                                            '#27ae60',
+                                                                            '#3498db',
+                                                                            '#2980b9',
+                                                                            '#9b59b6',
+                                                                            '#8e44ad',
+                                                                            '#f1c40f',
+                                                                            '#f39c12',
+                                                                            '#e67e22',
+                                                                            '#d35400',
+                                                                            '#e74c3c',
+                                                                            '#c0392b',
+                                                                            '#ecf0f1',
+                                                                            '#bdc3c7',
+                                                                            '#95a5a6',
+                                                                            '#7f8c8d',
                                                                         ],
-                                                                        
                                                                         borderColor: [
-                                                                            'rgba(255, 99, 132, 1)',
-                                                                            'rgba(54, 162, 235, 1)',
-                                                                            'rgba(255, 206, 86, 1)',
-                                                                            'rgba(75, 192, 192, 1)',
-                                                                            'rgba(153, 102, 255, 1)',
-                                                                            'rgba(255, 159, 64, 1)',
-                                                                            'rgba(255, 99, 132, 1)',
-                                                                            'rgba(54, 162, 235, 1)',
-                                                                            'rgba(255, 206, 86, 1)',
-                                                                            'rgba(75, 192, 192, 1)',
-                                                                            'rgba(153, 102, 255, 1)',
-                                                                            'rgba(255, 159, 64, 1)',
+                                                                            '#fff',
                                                                         ],
                                                                         borderWidth: 1
                                                                     }]
@@ -296,10 +229,55 @@
                                                                             beginAtZero: true
                                                                         }
                                                                     },
-                                                                }            
-                                                    });
+                                                                }
+                                                            });
                                                         });
-                                                      </script>
+                                                    </script>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="card text-white bg-dark h-100 bg-opacity-25">
+                                                <div class="card-body">
+                                                    <h2 class="fs-5 text-center">Category Types</h2>
+                                                    <canvas id="myChartCategories2"></canvas>
+                                                    <script type="text/javascript">
+                                                        var categoryTypes = JSON.parse(document.getElementById('category_types').textContent)
+                                                        var numIncome = JSON.parse(document.getElementById('numIncome').textContent)
+                                                        console.log('categoryTypes', categoryTypes)
+                                                        console.log('numIncome', numIncome)
+                                                        $(document).ready(function () {
+                                                            var ctx = document.getElementById('myChartCategories2').getContext('2d');
+                                                            var myCategory = new Chart(ctx, {
+                                                                type: 'doughnut',
+                                                                data: {
+                                                                    labels: categoryTypes,
+                                                                    datasets: [{
+                                                                        label: 'Category Types',
+                                                                        data: numIncome,
+                                                                        backgroundColor: [
+                                                                            '#1abc9c',
+                                                                            '#f39c12',
+                                                                        ],
+                                                                        borderColor: [
+                                                                            '#fff',
+                                                                        ],
+                                                                        borderWidth: 1
+                                                                    }]
+                                                                },
+                                                                options: {
+                                                                    legend: {
+                                                                        //display: false,
+                                                                    },
+                                                                    scales: {
+                                                                        y: {
+                                                                            beginAtZero: true
+                                                                        }
+                                                                    },
+                                                                }
+                                                            });
+                                                        });
+                                                    </script>
                                                 </div>
                                             </div>
                                         </div>
