Fixed styles for transaction, label, and category forms

--- a/budget/templates/budget/label-form.html
+++ b/budget/templates/budget/label-form.html
@@ -24,7 +24,7 @@
                             {{ form.amount_planned }}
                         </div>
                         <div class="form-group py-1">
-                            <label for="planned">Amount Received</label>
+                            <label for="received">Amount Received</label>
                             {{ form.amount_received }}
                         </div>
                         <div class="form-group py-1">
