--- a/budget/templates/budget/transaction-form.html
+++ b/budget/templates/budget/transaction-form.html
@@ -8,26 +8,34 @@
         </div>
         <div class="row mt-2">
             <div class="bg-dark h-100 bg-opacity-25 col-md-8">
-                <form method="POST" class="my-4 mx-4 text-light">
+                <form method="POST" class="my-4 mx-4 text-light" enctype="multipart/form-data">
                     {% csrf_token %}
-                    <div class="">
-                        <div class="form-group py-1">
+                    <div class="row">
+                        <div class="col form-group py-1">
                             <label for="type">Transaction Type</label>
                             {{ form.type }}
                         </div>
-                        <div class="form-group py-1">
+                    </div>
+                    <div class="row">
+                        <div class="col form-group py-1">
                             <label for="Label">Label</label>
                             {{ form.label }}
                         </div>
-                        <div class="form-group py-1">
+                    </div>
+                    <div class="row">
+                        <div class="col form-group py-1">
                             <label for="desc">Description</label>
                             {{ form.description }}
                         </div>
-                        <div class="form-group py-1">
+                    </div>
+                    <div class="row">
+                        <div class="col form-group py-1">
                             <label for="amount">Amount</label>
                             {{ form.amount }}
                         </div>
-                        <div class="form-group py-1">
+                    </div>
+                    <div class="row">
+                        <div class="col form-group py-1">
                             <label for="date">Date</label>
                             {{ form.date }}
                         </div>
